# ScaffoldGuard

./: AGENTS.md  CHANGELOG.md  README.md  agent_safe_python_v1_implementation_plan.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo_guard_v1_implementation_plan.md  scaffold_guard_v1_implementation_plan.md
.github/workflows/: ci.yml  publish.yml
docs/: adapters.md  checks.md  commands.md  generated-project.md  index.md  quickstart.md  releasing.md
scripts/: inspect-wheel.py  smoke-generated-project.sh
src/agent_safe/: __init__.py  __main__.py  cli.py  compile_rules.py  diffing.py  doctor.py  fs.py  models.py  project_config.py  renderer.py  scaffold.py  validation.py
src/agent_safe/adapters/: __init__.py  base.py  claude.py  codex.py  cursor.py
src/agent_safe/checks/: __init__.py  base.py  config.py  config_consistency.py  files.py  generated_files.py  project_health.py  runner.py  unsafe_patterns.py
src/agent_safe/templates/package/: AGENTS.md.j2  LICENSE.j2  README.md.j2  agent-safe.toml.j2  gitignore.j2  pyproject.toml.j2  pyrightconfig.json.j2
src/repo_guard/templates/package/: pyproject.toml.j2
src/scaffold_guard/: __init__.py  cli.py  compile_rules.py  diffing.py  doctor.py  fs.py  legacy.py  manifest.py  migrations.py  models.py  project_config.py  publish.py  renderer.py  scaffold.py  upgrade.py  validation.py  versions.py
src/scaffold_guard/adapters/: __init__.py  base.py  claude.py  codex.py  cursor.py
src/scaffold_guard/checks/: config.py  config_consistency.py  files.py  generated_files.py  project_health.py  unsafe_patterns.py
src/scaffold_guard/templates/minimal/: AGENTS.md.j2  README.md.j2  pyproject.toml.j2  scaffold-guard.toml.j2
src/scaffold_guard/templates/monorepo/: AGENTS.md.j2  README.md.j2  biome.json.j2  gitignore.j2  gitlab-ci.yml.j2  package.json.j2  pyproject.toml.j2  pyrightconfig.json.j2  scaffold-guard.toml.j2
src/scaffold_guard/templates/package/: AGENTS.md.j2  README.md.j2  gitignore.j2  pyproject.toml.j2  pyrightconfig.json.j2  scaffold-guard.toml.j2
src/scaffold_guard/templates/typescript/: AGENTS.md.j2  README.md.j2  biome.json.j2  gitignore.j2  gitlab-ci.yml.j2  package.json.j2  scaffold-guard.toml.j2  tsconfig.build.json.j2
tests/: conftest.py
tests/integration/: test_generated_package_profile.py  test_import_package.py  test_inspect_diff.py  test_publish_command.py  test_upgrade_command.py
tests/unit/: test_checks.py  test_cli_version.py  test_compile_rules.py  test_diffing.py  test_docs.py  test_doctor.py  test_fs.py  test_legacy.py  test_manifest.py  test_migrations.py  test_milestone6_commands.py  test_models.py  test_module_entrypoint.py  test_project_config.py  test_publish.py  test_release_scripts.py  test_renderer.py  test_scaffold.py  test_upgrade.py  test_validation.py  test_versions.py
(+73 files in other folders)
