[project]
name = "scaffold-guard"
version = "0.1.1"
description = "Generate guarded starter repositories for Codex, Claude Code, and Cursor."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["agents", "codex", "cursor", "claude", "scaffold", "scaffold-guard"]
authors = [
    { name = "Damien Benveniste" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.0",
    "packaging>=24.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/damienbenveniste/ScaffoldGuard"
Repository = "https://github.com/damienbenveniste/ScaffoldGuard"
Issues = "https://github.com/damienbenveniste/ScaffoldGuard/issues"
Documentation = "https://damienbenveniste.github.io/ScaffoldGuard/"

[project.scripts]
scaffold-guard = "scaffold_guard.cli:app"

[dependency-groups]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "pyright>=1.1.400",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scaffold_guard"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ANN",
    "ARG",
    "B",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "TRY",
    "UP",
]
ignore = [
    "TRY003",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 12
max-returns = 6
max-statements = 60

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["scaffold_guard"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
